--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     <p>Our Artificial Intelligence powered tools use millions of project data points 
       to ensure that your project is successful</p>
     <section>
-      <div>
+      <div class="box1">
         Supervisor
         Monitors activity to identify project roadblocks
       </div>
-      <div>
+      <div class="box2">
         Team Builder
         Scans our talent network to create the optimal team for your project
       </div>
-      <div>
+      <div class="box3">
         Karma
         Regularly evaluates our talent to ensure quality
       </div>
-      <div>
+      <div class="box4">
         Calculator
         Uses data from past projects to provide better delivery estimates
       </div>
